changed little things

--- a/css/hero.css
+++ b/css/hero.css
@@ -16,7 +16,8 @@ header{
 h1,h2{
 	font-family: 'Lobster Two', cursive;
 }
-
+/* header style */
+/* command * - */
 header h1{
 	color: white;
 	font-size: 75px;
